Bug 1238615 - Compiler warning: possibly uninitialized |rv| in nsMsgPrintEngine.cpp. r=bwinton